fix: make focus visible style same as hover on button

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ form > button {
     letter-spacing: 0.2em;
 }
 
-form > button:hover {
+form > button:hover, form > button:focus-visible {
     background-color: var(--white);
     cursor: pointer;
 }
